# ptex

./: .gitignore  .release.Ptex  .travis.yml  .workonrc.products  CMakeLists.txt  CNAME  LICENSE  Makefile  Maketop  Ptex.spec.in  PtexFile.html  README  README.md  adjdata.html  buildsite.py  documentation.html  download.html  index.html  mailinglists.html  metakeys.html  overview.html  ptex.css  ptex.pc.in  ptexpaper.html  samples.html  style.css  tritex.html  wdaslogo.html
.github/workflows/: build.yml
apidocs/: PtexCache_8cpp.html  PtexCache_8cpp_source.html  PtexCache_8h.html  PtexCache_8h_source.html  PtexFilters_8cpp.html  PtexFilters_8cpp_source.html  PtexHalfTableGen_8cpp.html  PtexHalfTableGen_8cpp_source.html  PtexHalfTables_8h.html  PtexHalfTables_8h_source.html  PtexHalf_8cpp.html  PtexHalf_8cpp_source.html  PtexHalf_8h.html  PtexHalf_8h_source.html  PtexHashMap_8h.html  PtexHashMap_8h_source.html  PtexIO_8h.html  PtexIO_8h_source.html  PtexInt_8h.html  PtexInt_8h_source.html  PtexMutex_8h.html  PtexMutex_8h_source.html  PtexPlatform_8h.html  PtexPlatform_8h_source.html  PtexReader_8cpp.html  PtexReader_8cpp_source.html  PtexReader_8h.html  PtexReader_8h_source.html  PtexSeparableFilter_8cpp.html  PtexSeparableFilter_8cpp_source.html  PtexSeparableFilter_8h.html  PtexSeparableFilter_8h_source.html  PtexSeparableKernel_8cpp.html  PtexSeparableKernel_8cpp_source.html  PtexSeparableKernel_8h.html  PtexSeparableKernel_8h_source.html  PtexTriangleFilter_8cpp.html  PtexTriangleFilter_8cpp_source.html  PtexTriangleFilter_8h.html  PtexTriangleFilter_8h_source.html  (+279 more)
etc/: attaches.Linux
src/: CMakeLists.txt  Makefile  Makefile.defs
src/doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_API_only  FilterFootprint.html  License.txt  Makefile  PtexFile.html  README  adjdata.txt  apiintro.txt  doxymain.txt  filterfootprint.txt  intro.txt  main.txt  metadata.txt  style.css  todo.txt  tritex.txt
src/etc/: common.mak
src/prman/: .gitignore  Makefile  cube.rib  cubeenvmap.rib  ptexenvtest.sl  ptextest.sl  ptextureShadeop.cpp
src/prman/test/: Makefile  cube.rib  ptextest.sl
src/prman/test/rmantex/text/: cube.ptx
src/prman/tests/: Makefile  ptexenvtest.sl  ptextest.sl
src/prman/tests/bordermodes/: .gitignore  Makefile  black.ptx  black.rib  clamp.ptx  clamp.rib  mkptx.cpp  periodic.ptx  periodic.rib  ptextest.sl
src/prman/tests/cube/: cube.rib  cubeenvmap.rib  garage.penv
src/prman/tests/dispplane/: Makefile  dispplane.py  dispplane.rib  head.rib  mid.rib  tail.rib  test.sl
src/prman/tests/dispplane/rand/: pPlane1.ptx
src/prman/tests/dispplane/rand_lo/: pPlane1.ptx
src/prman/tests/dispplane/wave_lo/: pPlane1.ptx
src/prman/tests/flatsphere/: cellnoise.ptx  flatSphere.rib  head.rib  mid.rib  pPyramid1.ptx  ptextest.sl  tail.rib  zoomptex.py
src/prman/tests/nonquad/: tritest.rib  tritest_obj.rib  uv.rib  uv.sl
src/prman/tests/nonquad/evblur/: pPlane1.ptx  pPlane1Unsub.ptx
src/prman/tests/nonquad/test/: pPlane1.ptx  pPlane1Unsub.ptx
src/prman/tests/tri/: gentri.cpp  quad.ptx  quad.tif  test.sl  tri.ptx  triangle.rib  uv.ptx  uv.tx
src/ptex/: .gitignore  CMakeLists.txt  DGDict.h  DGHashMap.h  Makefile  Makefile.deps  Makelet  PtexCache.cpp  PtexCache.h  PtexDict.h  PtexExports.h  PtexFile.html  PtexFilterContext.h  PtexFilterKernel.cpp  PtexFilterKernel.h  PtexFilters.cpp  PtexHalf.cpp  PtexHalf.h  PtexHalfTableGen.cpp  PtexHalfTables.h  PtexHashMap.h  PtexIO.h  PtexInt.h  PtexLockFile.cpp  PtexLockFile.h  PtexMitchellFilter.cpp  PtexMitchellFilter.h  PtexMutex.h  PtexPlatform.h  PtexReader.cpp  PtexReader.h  PtexSeparableFilter.cpp  PtexSeparableFilter.h  PtexSeparableKernel.cpp  PtexSeparableKernel.h  PtexTriangleFilter.cpp  PtexTriangleFilter.h  PtexTriangleKernel.cpp  PtexTriangleKernel.h  PtexTrilinearFilter.cpp  (+18 more)
src/tests/: .gitignore  CMakeLists.txt  Makefile  check_version.sh  compare_test.cmake  ftest.cpp  halftest.cpp  rtest.cpp  run_tests.py  wtest.cpp
src/utils/: .gitignore  CMakeLists.txt  Makefile  mesh.cpp  mesh.h  objtorib.cpp  ptxinfo.cpp  ptxmake.cpp  ptxmeta.cpp  subdivideptx.cpp  unsubdivideptx.cpp
src/windows/: .gitignore
src/windows/ftest/: ftest.vcproj
src/windows/ftest/Debug/: BuildLog.htm  mt.dep  vc80.idb
src/windows/halftest/: halftest.vcproj
src/windows/halftest/Debug/: BuildLog.htm  mt.dep  vc80.idb
src/windows/ptex/: ptex.sln  ptex.vcproj
src/windows/ptex/Debug/: BuildLog.htm  mt.dep  ptex.exp  ptex.lib  vc80.idb
src/windows/ptxinfo/: ptxinfo.vcproj
src/windows/ptxinfo/Debug/: BuildLog.htm  mt.dep  vc80.idb
src/windows/rtest/: rtest.vcproj
src/windows/rtest/Debug/: BuildLog.htm  mt.dep  vc80.idb
src/windows/wtest/: wtest.vcproj
src/windows/wtest/Debug/: BuildLog.htm  mt.dep  vc80.idb
