CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( WaltzDisneyPtex )
INCLUDE ( CTest )
# ENABLE_TESTING()

FIND_PACKAGE ( ZLIB )

INCLUDE_DIRECTORIES ( ptex )
INCLUDE_DIRECTORIES ( ${ZLIB_INCLUDE_DIR} )

IF ( WIN32 )
  SET ( Z_LIBRARY ${ZLIB_LIBRARY} )
  ADD_DEFINITIONS ( /DZLIB_DLL )
  SET ( BUILD_STATIC TRUE )
ELSE ( WIN32 )
  SET ( BUILD_STATIC TRUE )
  SET ( PTHREAD_LIBRARY pthread )
  SET ( Z_LIBRARY z )
ENDIF ( WIN32 )

ADD_SUBDIRECTORY ( ptex  )
ADD_SUBDIRECTORY ( tests )
ADD_SUBDIRECTORY ( utils )
ADD_SUBDIRECTORY ( doc )
